--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:linux": "tsc && vite build && electron-builder --linux",
     "build:mac": "tsc && vite build && electron-builder --mac",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest"
   },
   "keywords": [
     "launcher",
@@ -21,10 +22,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -32,10 +34,11 @@
     "pidusage": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^3.3.0",
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -44,13 +47,15 @@
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
     "electron-icon-maker": "^0.0.5",
+    "jsdom": "^27.2.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vite-plugin-electron": "^0.28.0",
-    "vite-plugin-electron-renderer": "^0.14.5"
+    "vite-plugin-electron-renderer": "^0.14.5",
+    "vitest": "^4.0.14"
   },
   "build": {
     "appId": "com.softwarelauncher.app",
